# network-analyser

./: index.html  package-lock.json  package.json  page.html  prompt.txt  tailwind.config.js  types.rs
src/: main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  monitor.rs  types.rs
src/components/: App.tsx  ConnectionTable.tsx  EventLog.tsx  HistoryChart.tsx  ProcessTable.tsx  SelectField.tsx  Sidebar.tsx  Sparkline.tsx  StatCards.tsx  TitleBar.tsx  TrafficChart.tsx
src/lib/: format.ts  mock.ts  styles.ts  types.ts  useMonitor.ts
